k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api-service
  labels:
    app: backend-api
spec:
  type: NodePort
  selector:
    app: backend-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
